// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary four - small 1`] = `
Array [
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />,
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-3
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Text>
        secondary-4
      </Text>
    </View>
  </View>,
]
`;

exports[`2. secondary four - medium 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 20,
    }
  }
>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 15,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingVertical": 5,
      }
    }
  >
    <Text>
      secondary-3
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;

exports[`3. secondary four - medium - with isconsecutive 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row-reverse",
      "marginHorizontal": 20,
    }
  }
>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 15,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingVertical": 5,
      }
    }
  >
    <Text>
      secondary-3
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;

exports[`4. secondary four - wide 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 15,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingVertical": 5,
      }
    }
  >
    <Text>
      secondary-3
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;

exports[`5. secondary four - wide - with isconsecutive 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row-reverse",
      "marginHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 2,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-1
      </Text>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 15,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 15,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingVertical": 5,
      }
    }
  >
    <Text>
      secondary-3
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      secondary-4
    </Text>
  </View>
</View>
`;
